# Code_Alpha_ObjectDetection

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  app.py  pyproject.toml  setup.ps1  streamlit_app.py
configs/: default.yaml  pro_demo.yaml
src/object_tracking/: __init__.py  analytics.py  cli.py  config.py  export.py  geometry.py  pipeline.py  pose.py  privacy.py  visualization.py
tests/: test_analytics.py  test_api.py  test_geometry.py
