[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "object-detection-tracking"
version = "0.1.0"
description = "Real-time object detection and multi-object tracking with YOLO and OpenCV."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]
dependencies = [
    "lap>=0.5.13",
    "numpy>=1.26",
    "opencv-python>=4.10.0",
    "PyYAML>=6.0.2",
    "ultralytics>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[project.scripts]
track-objects = "object_tracking.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
